--- a/requirements.txt
+++ b/requirements.txt
@@ -107,6 +107,7 @@ MultiScaleDeformableAttention==1.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.3
+nibabel==5.1.0
 ninja==1.11.1.1
 numpy==2.0.0
 nvidia-cublas-cu12==12.1.3.1
